--- a/app/index.jade
+++ b/app/index.jade
@@ -1,5 +1,6 @@
 doctype html
 html
   head
+    link(rel='stylesheet', href='../css/app.css')
   body
-    h1 lorem ipsum nononono
+    h1 lorem ipsum 
