"init javascript task"

--- a/app/index.jade
+++ b/app/index.jade
@@ -4,3 +4,9 @@ html
     link(rel='stylesheet', href='../css/app.css')
   body
     h1 lorem ipsum 
+    
+    table(id="table")
+      tr 
+        td Loading...
+
+    script(src="../js/app.js")
