feat(design): add flexbox layout

--- a/app/index.jade
+++ b/app/index.jade
@@ -3,10 +3,7 @@ html
   head
     link(rel='stylesheet', href='../css/app.css')
   body
-    h1 lorem ipsum 
-    
-    table(id="table")
-      tr 
-        td Loading...
+
+    #target
 
     script(src="../js/app.js")
