feat(filter): add list js

--- a/app/index.jade
+++ b/app/index.jade
@@ -4,6 +4,8 @@ html
     link(rel='stylesheet', href='../css/app.css')
   body
 
-    #target
+    #podcast-wrapper
+      input(type='search').search
+      ul#target.list
 
     script(src="../js/app.js")
