--- a/app/sass/_podcast.scss
+++ b/app/sass/_podcast.scss
@@ -2,6 +2,9 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  margin: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 .podcast {
