--- a/app/index.jade
+++ b/app/index.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     link(rel='stylesheet', href='../css/app.css')
+    meta(name="viewport" content="width=device-width, initial-scale=1")
   body
 
     #podcast-wrapper
