feat(layout): responsive view

--- a/app/sass/_podcast.scss
+++ b/app/sass/_podcast.scss
@@ -9,8 +9,9 @@
 
 .podcast {
   box-shadow: 0 0 1px 2px #ccc;
-  flex-basis: 24%;
-  margin-bottom: 2vw;
+  flex-basis: calc(25% - 10px);
+  margin: 5px 5px;
+  min-width: 320px;
   padding: 5px;
   &__title {
     font-size: 1.5rem;
