fix(layout): responsive view

--- a/app/sass/_podcast.scss
+++ b/app/sass/_podcast.scss
@@ -8,10 +8,11 @@
 }
 
 .podcast {
+  flex-basis: 250px;
+  flex-shrink: 0;
+  flex-grow: 1;
   box-shadow: 0 0 1px 2px #ccc;
-  flex-basis: calc(25% - 10px);
   margin: 5px 5px;
-  min-width: 320px;
   padding: 5px;
   &__title {
     font-size: 1.5rem;
