--- a/app/index.jade
+++ b/app/index.jade
@@ -6,7 +6,9 @@ html
   body
 
     #podcast-wrapper
-      input(type='search').search
+      input(type="search").search
+      input(type="checkbox")#oldShow
+      label(for="oldShow") Régi Adás
       ul#target.list
 
     script(src="../js/app.js")
