--- a/app/index.jade
+++ b/app/index.jade
@@ -3,11 +3,12 @@ html
   head
     link(rel='stylesheet', href='../css/app.css')
     meta(name="viewport" content="width=device-width, initial-scale=1")
+    link(href='https://fonts.googleapis.com/css?family=Oswald:400,700,300&subset=latin-ext' rel='stylesheet' type='text/css')
   body
 
     #podcast-wrapper
-      h1 Gombapresszó műsorok
-      input(type="search" placeholder="keresés a műsorok között").search
+      h1.head Gombapresszó műsorok
+      input.search(type="search" placeholder="keresés a műsorok között")
       div
         input(type="radio" name="showtype" value="all-show" checked)#all-show
         label(for="all-show") Összes adás
