--- a/app/sass/_base.scss
+++ b/app/sass/_base.scss
@@ -5,9 +5,18 @@
     box-sizing: border-box;
   }
 }
+
+body {
+  color: #333;
+  font-family: 'Oswald', sans-serif;
+  line-height: 1.3;
+}
+
 h1,
 h2,
 h3 {
+  margin: 0.1em 0 .3em;
+
   a {
     &,
     &:active,
@@ -20,3 +29,8 @@ h3 {
 audio {
   width: 100%;
 }
+
+.head {
+ text-transform: uppercase;
+}
+
