--- a/app/sass/_podcast.scss
+++ b/app/sass/_podcast.scss
@@ -8,14 +8,31 @@
 }
 
 .podcast {
+  display: flex;
+  flex-direction: column;
   flex-basis: 250px;
   flex-shrink: 0;
   flex-grow: 1;
   box-shadow: 0 0 1px 2px #ccc;
   margin: 5px 5px;
   padding: 5px;
+
+  &__duration {
+    text-align: right;
+  }
+
   &__title {
+    color: #ea1d2c;
     font-size: 1.5rem;
+    line-height: 1.2em;
     word-break: break-word;
   }
+}
+
+.content {
+  padding: 10px 0;
+}
+
+.date {
+  margin-top: auto;
 }
