feat(design): change order

--- a/app/sass/_podcast.scss
+++ b/app/sass/_podcast.scss
@@ -17,15 +17,17 @@
   margin: 5px 5px;
   padding: 5px;
 
-  &__duration {
-    text-align: right;
-  }
 
   &__title {
     color: #ea1d2c;
     font-size: 1.5rem;
     line-height: 1.2em;
     word-break: break-word;
+  }
+
+  audio {
+    margin-top: auto;
+    margin-bottom: 5px;
   }
 }
 
@@ -34,5 +36,5 @@
 }
 
 .date {
-  margin-top: auto;
+  //margin-top: auto;
 }
