--- a/app/sass/_base.scss
+++ b/app/sass/_base.scss
@@ -10,7 +10,9 @@ body {
   color: #333;
   font-family: 'Oswald', sans-serif;
   line-height: 1.3;
+  padding: 1em 0;
 }
+
 
 h1,
 h2,
@@ -26,6 +28,9 @@ h3 {
   }
 }
 
+h1 {
+  @include typeset($font: $sans, $fontsize: 38px, $lineheight: 38px, $leader: 2, $trailer: 2rem);
+}
 audio {
   width: 100%;
 }
@@ -34,3 +39,5 @@ audio {
  text-transform: uppercase;
 }
 
+#podcast-wrapper {
+}
