--- a/app/sass/_podcast.scss
+++ b/app/sass/_podcast.scss
@@ -15,13 +15,11 @@
   flex-grow: 1;
   box-shadow: 0 0 1px 2px #ccc;
   margin: 5px 5px;
-  padding: 5px;
+  padding: 2rem 1rem;
 
 
   &__title {
     color: #ea1d2c;
-    font-size: 1.5rem;
-    line-height: 1.2em;
     word-break: break-word;
   }
 
@@ -31,9 +29,6 @@
   }
 }
 
-.content {
-  padding: 10px 0;
-}
 
 .date {
   //margin-top: auto;
