--- a/app/sass/_base.scss
+++ b/app/sass/_base.scss
@@ -10,22 +10,22 @@ $breakpoint-map: (
   0: (
     start:      0px,
     max:        420px,
-    rootsize:   12px
+    rootsize:   13px
   ),
   1: (
     start:      480px,
     max:        560px,
-    rootsize:   14px
+    rootsize:   13px
   ),
   2: (
     start:      768px,
     max:        840px,
-    rootsize:   16px
+    rootsize:   13px
   ),
   3: (
     start:      980px,
     max:        1080px,
-    rootsize:   18px
+    rootsize:   13px
   ),
   4: (
     start:      1280px,
@@ -82,7 +82,10 @@ h3 {
 }
 
 h1 {
-  @include typeset($sans, 23px, 2, 0, 2);
+  @include typeset($sans, 46px, 4, 0, 2);
+}
+h2 {
+  @include typeset($sans, 23px, 2, 0, 1);
 }
 
 p {
@@ -100,6 +103,15 @@ p {
 
 audio {
   width: 100%;
+}
+.podcast__date {
+  @include typeset($sans, 13px, 2, 0, 2);
+  float: left;
+}
+
+.podcast__duration {
+  @include typeset($sans, 11px, 2, 0, 2);
+  float: right;
 }
 
 .checkbox {
