--- a/app/sass/_podcast.scss
+++ b/app/sass/_podcast.scss
@@ -14,8 +14,8 @@
   flex-shrink: 0;
   flex-grow: 1;
   box-shadow: 0 0 1px 2px #ccc;
-  margin: 5px 5px;
-  padding: 2rem 1rem;
+  margin: 1rem;
+  padding: 1rem 1rem;
 
 
   &__title {
