--- a/app/sass/_podcast.scss
+++ b/app/sass/_podcast.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  margin: 0;
+  margin: 0 -1rem;
   list-style-type: none;
   padding: 0;
 }
