--- a/app/sass/app.scss
+++ b/app/sass/app.scss
@@ -1,4 +1,6 @@
+@import "config";
 @import "normalize";
 @import "../megatype/megatype";
+@import "baseline/baseline";
 @import "base";
 @import "podcast";
