feat(design): go material

--- a/app/index.jade
+++ b/app/index.jade
@@ -8,7 +8,7 @@ html
 
     .container
       #podcast-wrapper
-        h1.head Gombapresszó műsorok
+        h1.new.head Gombapresszó műsorok
         input.search(type="search" placeholder="keresés a műsorok között")
         div
           input(type="radio" class="checkbox" name="showtype" value="all-show" checked)#all-show
@@ -20,5 +20,5 @@ html
 
         hr
         ul#target.list
-
+          li Töltés
       script(src="../js/app.js")
