--- a/app/sass/baseline/_config.scss
+++ b/app/sass/baseline/_config.scss
@@ -1,2 +1,7 @@
 $debug-base-color: #f54848 !default;
 $root-size: 13px !default;
+
+$font: (
+  font-family: 'Oswald, Arial, sans-serif',
+  cap-height: 0.88
+) !default;
