--- a/app/sass/_podcast.scss
+++ b/app/sass/_podcast.scss
@@ -8,6 +8,7 @@
 }
 
 .podcast {
+  background: #fff;
   display: flex;
   flex-direction: column;
   flex-basis: 300px;
@@ -15,8 +16,13 @@
   flex-grow: 1;
   //box-shadow: 0 0 1px 2px #ccc;
   margin: 1rem;
-  border: 1px solid rebeccapurple;
   padding: calc(1rem - 1px);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+
+  &:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  }
 
 
   &__title {
