--- a/app/sass/_config.scss
+++ b/app/sass/_config.scss
@@ -37,7 +37,7 @@ $breakpoint-map: (
 
 // enable formal baseline grid
 // snaps all type to the baseline grid
-$baseline-snap: true;
+$baseline-snap: false;
 
 $sans: (
   font-family: 'Oswald, Arial, sans-serif',
