--- a/app/index.jade
+++ b/app/index.jade
@@ -8,7 +8,11 @@ html
 
     .container
       #podcast-wrapper
-        h1.new.head Gombapresszó műsorok
+        //.grid
+        //  h1.new.head Gombapresszó műsorok
+        //  hr
+        //.grid
+        h1.old.head Gombapresszó műsorok
         input.search(type="search" placeholder="keresés a műsorok között")
         div
           input(type="radio" class="checkbox" name="showtype" value="all-show" checked)#all-show
