--- a/app/index.jade
+++ b/app/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    link(rel='stylesheet', href='../css/app.css')
+    link(rel='stylesheet', href='./css/app.css')
     meta(name="viewport" content="width=device-width, initial-scale=1")
     link(href='https://fonts.googleapis.com/css?family=Oswald:400,700,300&subset=latin-ext' rel='stylesheet' type='text/css')
   body
@@ -25,4 +25,4 @@ html
         hr
         ul#target.list
           li Töltés
-      script(src="../js/app.js")
+      script(src="./js/app.js")
